# sloth_users

./: .env  docker-compose.yml
sloth_users/: .env  Dockerfile  Jenkinsfile  docker-compose.yml  main.py  pyproject.toml  sloth.code-workspace
sloth_users/app/api/routes/: dependencies.py  users.py
sloth_users/app/api/utils/: pass_utils.py
sloth_users/app/core/: config.py  logger.py
sloth_users/app/db/: __init__.py  functions.py  init.sql  procedures.py
sloth_users/app/middlewares/: request_info.py
sloth_users/app/schemas/: users.py  utils.py
